# http-signatures

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: publish.yml  toolchain.yml
http-sig-validator/: Cargo.toml  config.json
http-sig-validator/src/: main.rs
src/: algorithm.rs  canonicalize.rs  header.rs  lib.rs  macros.rs  mock_request.rs  reqwest_impls.rs  rouille_impls.rs  signing.rs  verifying.rs
src/algorithm/: openssl.rs  ring.rs
