[package]
name = "http-sig"
description = "Implementation of the IETF draft 'Signing HTTP Messages'"
version = "0.3.0"
authors = ["Jack Cargill <jack@passfort.com>", "Diggory Blake"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/crate/http-sig"
repository = "https://github.com/PassFort/http-signatures"
homepage = "https://github.com/PassFort/http-signatures"

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = "0.4.11"
hmac = "0.7.1"
http = "0.2.1"
sha2 = "0.8.1"
base64 = "0.12.0"
reqwest = {version = "0.10.4", features = ["blocking"], optional = true}
rouille = {version = "3.0.0", optional = true}
subtle = "2.2.2"
