[package]
name = "http-sig"
description = "Implementation of the IETF draft 'Signing HTTP Messages'"
version = "0.6.0"
authors = ["Jack Cargill <jack@passfort.com>", "Diggory Blake"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/crate/http-sig"
repository = "https://github.com/PassFort/http-signatures"
homepage = "https://github.com/PassFort/http-signatures"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["http-sig-validator"]

[dependencies]
chrono = "0.4.11"
http = "0.2.1"
sha2 = "0.10.1"
base64 = "0.12.0"
reqwest = {version = "0.11", features = ["blocking"], optional = true}
rouille = {version = "3.0.0", optional = true}
subtle = "2.2.2"
ring = { version = "0.16.12", features = ["std"], optional = true }
url = "2.1.1"
hmac = "0.12"
openssl = { version = "0.10.29", optional = true }
log = "0.4.8"
anyhow = "1.0.28"
itertools = "0.9.0"
thiserror = "1.0.15"
